correction on mobile view in contact page

--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -38,8 +38,7 @@
     align-items: start;
 
     form {
-      width: 500px;
-      max-width: 100%;
+      width: 100%;
       margin-right: 1rem;
       margin-bottom: 1rem;
       label {
